# robco_common

./: .gitignore  LICENSE  README.md
arm_voice_control/: CMakeLists.txt  package.xml
arm_voice_control/src/: voice_command_subscriber.py
bg_voce_command_matcher/: CMakeLists.txt  package.xml
bg_voce_command_matcher/config/: dictionary_compact_style_not_used.json
bg_voce_command_matcher/src/: voice_command_match.py
bg_vocie_command_matcher/: CMakeLists.txt  package.xml
bg_vocie_command_matcher/config/: dictionary.json  read_before_modifying_dictionary_file.txt
bg_vocie_command_matcher/launch/: bg_voice_command_matcher.launch
bg_vocie_command_matcher/src/: voice_command_match.py
cpr_mover/include/: cpr_mover.h
cpr_mover/src/: cpr_mover.cpp
cpr_rviz_plugin/: CPRMover4.urdf.original_no_joint_limits_.xacro  CPRMover4.urdf.xacro
cpr_rviz_plugin/src/: teleop_panel.cpp
old_eddie_launch_files/: amcl_demo.launch  build_map.launch  cpr_mover4.launch  eddie (copy).launch  eddie.launch  eddie_old.launch  follower.launch  gmapping_demo.launch  kinect_rgb.launch  navigation.launch  office.pgm  office.yaml  stderr  stdout  web_socket.launch
old_eddie_startup_scripts/: ros.sh  startup.sh
robco19e_cprmover4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robco_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
robco_laser_filters/: CMakeLists.txt  package.xml
robot_description/: package.xml
web_ui/: CMakeLists.txt  WebUI install base_station.txt  db.sqlite3  nohup.out  package.xml  start_me.sh  start_voice.sh
web_ui/interface/: models.py  (+2 more)
(+142 files in other folders)
