<package format="2">
  <name>robco_common</name>
  <version>0.1.0</version>
  <description>The robco_common metapackage contains common packages that are used within the Robco repository. E.g. utility packages or common message and service definitions etc. Also the urdf desciption of the robot is located in this metapackage.</description>
  <license>BSD 3-Clause "New" or "Revised" License</license>

  <url type="website">http://www.serviceroboticsgroup.com/</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="s@s.com">Stefan</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_description</exec_depend>
  <exec_depend>cob_msgs</exec_depend>
  <exec_depend>cob_srvs</exec_depend>
  <exec_depend>raw_description</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>